--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-requests>=2.25.1
-opencv-python>=4.5.0
-Pillow>=8.0.0
-numpy>=1.19.0
-pytz>=2021.1
+requests>=2.31.0
+opencv-python>=4.8.0
+Pillow>=10.0.0
+numpy>=1.24.0
+pytz>=2025.1
+smtplib3>=0.2.0
+python-dateutil>=2.8.2
